Fixed overflow problem

--- a/src/app/main-page/chat-list/chat-list.component.css
+++ b/src/app/main-page/chat-list/chat-list.component.css
@@ -1,8 +1,19 @@
 :host{
   width: 100% !important;
-  max-height: fill-available !important;
-  overflow: scroll;
+  
+  overflow-y: auto;
 }
+
+:host::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+:host::-webkit-scrollbar-thumb {
+  background: #FF0000;
+}
+
+
 
 #contacts{
   width: 100%;
