--- a/src/app/main-page/current-chat/current-chat.component.css
+++ b/src/app/main-page/current-chat/current-chat.component.css
@@ -1,18 +1,20 @@
 
-
+:host{
+  width: 100%;  
+  overflow-x: hidden;
+}
 .content {
   float: right;
   width: 100%;
   height: 100%;
   overflow: hidden;
   position: relative;
-  width: 1000px;
   min-width: 300px !important;
 
 }
 
 .content .contact-profile {
-  width: 1500px;
+  width: 100%;
   height: 60px;
   line-height: 60px;
   background: #f5f5f5;
@@ -44,7 +46,6 @@
 .content .messages ul li {
   display: inline-block;
   clear: both;
-  float: left;
   margin: 15px 15px 5px 15px;
   width: calc(100% - 25px);
   font-size: 0.9em;
@@ -98,7 +99,7 @@
   font-family: "proxima-nova",  "Source Sans Pro", sans-serif;
   float: left;
   border-radius: 30px;
-  width: 900px;
+  width: 70%;
   padding: 11px 32px 10px 8px;
   font-size: 0.9em;
   color: #32465a;
